[package]
name = "espos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7.16"
httparse = "1.8.0"
http = "0.2.8"
bytes = "1.2.1"

esp-idf-sys = { version = "0.31.10", features = ["std"] }
rand = "0.8.5"